--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,6 @@ android {
 }
 
 def retrofitVersion = '2.6.2'
-def rxJavaVersion = '3.1.5'
 
 dependencies {
 
@@ -53,5 +52,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
-    implementation "io.reactivex.rxjava3:rxjava:$rxJavaVersion"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
 }
